<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:textSize="12sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_one"
        android:maxLength="16"/>
    <EditText
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_two"
        android:maxLength="16"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_normal_game"
        android:backgroundTint="@color/colorLightestBlueButton"
        android:onClick="onGameStartButton"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorLightestBlueButton"
        android:onClick="onBigGameStartButton"
        android:text="@string/start5x5_game"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:backgroundTint="@color/colorLightestBlueButton"
        android:onClick="startStatistics"
        />

</LinearLayout>
