<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow android:weightSum="3"
            android:padding="10dp"
            android:background="@color/colorLightestBlueButton">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/games_won"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/games_lost"
                android:textStyle="bold"/>
        </TableRow>

    </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:id="@+id/statisticsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
</ScrollView>
</LinearLayout>
